# high-freq-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py
src/data/: data_loader.py
src/features/: feature_generator.py
src/models/: base_model.py  catboost_model.py  mcmc_optimizer.py
src/utils/: metrics.py
tests/: test_metrics.py
